--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,6 +20,14 @@
   flex-grow: 1;
 }
 
+.product-card a {
+  /*fixed*/
+  object-fit: scale-down;
+  width: 100%;
+  min-height: 100px;
+  flex-grow: 1;
+}
+
 .product-card-info {
   /*customizable*/
   padding: 16px;
