--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -1,7 +1,7 @@
 .widget-button {
     width: 80px;
     height: 60px;
-    border-radius: 12px;
+    border-radius: 12px 0 0 0;
     background-color: var(--widget-topbar-color);
     box-shadow: 0px 0px 2px grey;
     position: fixed;
