--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -1,21 +1,21 @@
-*::-webkit-scrollbar-track
+.content-dev::-webkit-scrollbar-track
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius: 8px;
+  border-radius: 5px;
   background-color: lightgray;
 }
 
-*::-webkit-scrollbar
+.content-dev::-webkit-scrollbar
 {
-  width: 12px;
+  width: 5px;
   background-color: lightgray;
-  border-radius: 8px;
+  border-radius: 3px;
 }
 
-*::-webkit-scrollbar-thumb
+.content-dev::-webkit-scrollbar-thumb
 {
-  border-radius: 8px;
+  border-radius: 3px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #EAEEF3;
