--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -100,6 +100,9 @@
 .widgets-session,
 .widgets-session-time {
   align-items: baseline;
+  p {
+    margin-right: 8px;
+  }
 }
 
 .widgets-session-time-wrapper,
