--- a/app/views/shared/_global_stats.html.erb
+++ b/app/views/shared/_global_stats.html.erb
@@ -5,7 +5,7 @@
       <h4><%= @most_time %></h4>
     </div>
     <div class="widgets-session-time-chart">
-      <%= column_chart WidgetAccess.group(:widget_id).sum(:session_time), ytitle: "Time per widget" %>
+      <%= bar_chart WidgetAccess.group(:widget_id).sum(:session_time), xtitle: "Time per widget" %>
     </div>
   </div>
   <div class="widgets-session-wrapper">
@@ -14,7 +14,7 @@
       <h4><%= @most_sessions %> </h4>
     </div>
     <div class="widgets-session-chart">
-      <%= column_chart WidgetAccess.group(:widget_id).count, ytitle: "Number of Sessions"%>
+      <%= bar_chart WidgetAccess.group(:widget_id).count, xtitle: "Number of Sessions"%>
     </div>
   </div>
   <div class="widgets-clicks-wrapper">
