--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -1,5 +1,6 @@
 .widget-button {
-    width: 80px;
+    padding: 8px;
+    // width: 80px;
     height: 60px;
     border-radius: 12px 0 0 0;
     background-color: var(--widget-topbar-color);
@@ -13,42 +14,40 @@
     // overflow: hidden;
     color: var(--widget-highlight-color);
     transition: height 0.3s ease, width 0.3s ease;
-    small {
-        display: none;
-    }
+    cursor: pointer;
     svg {
         width: 35px;
         height: 35px;
     }
     #widget-yt-btn {
-        margin-top: 15px;
-        margin-right: -12px;
+        opacity: 0.8;
+        margin-right: 3px;
+
     }
     #widget-rd-btn {
         opacity: 0.8;
-        margin-right: 3px;
-        margin-bottom: 15px;
+        margin-right: 8px;
     }
 }
 
-.widget-button:hover {
-    width: var(--widget-width);
-    max-width: 100vw;
-    padding: 12px;
-    justify-content: flex-start;
-    small {
-        display: block;
-    }
-    #widget-yt-btn {
-        margin-top: 0px;
-        margin-right: 0px;
-    }
-    #widget-rd-btn {
-        opacity: 1;
-        margin-right: 8px;
-        margin-bottom: 0px;
-    }
-}
+// .widget-button:hover {
+//     width: var(--widget-width);
+//     max-width: 100vw;
+//     padding: 12px;
+//     justify-content: flex-start;
+//     small {
+//         display: block;
+//     }
+//     #widget-yt-btn {
+//         margin-top: 0px;
+//         margin-right: 0px;
+//     }
+//     #widget-rd-btn {
+//         opacity: 1;
+//         margin-right: 8px;
+//         margin-bottom: 0px;
+//     }
+// }
 
 .widget-wrapper {
     position: fixed;
